deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  name: "my-name-app-service"
  namespace: "training"
  labels:
    app: "my-name-app"
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: "my-name-app"
